# Oura-Pipeline

./: .env.example  .gitignore  CLAUDE.md  README.md  dagster_cloud.yaml  pyproject.toml
.claude/docs/: project.md
.github/workflows/: branch_deployments.yml  deploy.yml
dbt_oura/: .user.yml  dbt_project.yml  profiles.yml
dbt_oura/macros/: generate_schema_name.sql
dbt_oura/models/: sources.yml
dbt_oura/models/marts/: fact_daily_wellness.sql  fact_sleep.sql  fact_sleep_detail.sql
dbt_oura/models/staging/: schema.yml  stg_activity.sql  stg_heartrate.sql  stg_oura_sleep.sql  stg_readiness.sql  stg_resilience.sql  stg_rest_mode_periods.sql  stg_sessions.sql  stg_sleep.sql  stg_sleep_periods.sql  stg_sleep_time.sql  stg_spo2.sql  stg_stress.sql  stg_tags.sql  stg_workouts.sql
docs/archive/: build-remaining-dbt-models.md  dagster-modernization.md  health_report_generation.md
docs/archive/health_report_generation/: phase_1_analysis_engine.md  phase_2_data_fetching.md  phase_4_rendering_delivery.md  phase_5_dagster_integration.md
docs/code_reviews/: 2026-03-13_full_repo_review.md
docs/health_report_generation/: phase_3_chart_generation.md
docs/plans/: fix_duckdb_concurrent_locking.md  snowflake_migration.md
docs/plans/snowflake_migration/: phase_0_manual_setup.md  (+4 more)
scripts/: diagnose_endpoints.py  diagnose_single_day.py
src/: oura_oauth_cli.py
src/dagster_project/: definitions.py
src/oura_client/: __init__.py  client.py  oauth_server.py  token_store.py
tests/: conftest.py  test_asset_checks.py  test_dbt_translator.py  test_duckdb_resource.py  test_oura_api.py  test_report_analysis.py  test_report_assets.py  test_report_charts.py  test_report_data.py  test_report_delivery.py  test_report_renderer.py  test_schedule.py  test_snowflake_resource.py  test_upsert_day.py
tests/fixtures/: sleep_fixture.csv  wellness_fixture.csv  workout_fixture.csv
(+13 files in other folders)
